objects/Benfit_Request_Form__c.object
<CustomObject>
    <fields>
        <fullName>Count_of_Proposed_Products__c</fullName>
        <label>Count of Proposed Products</label>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Risk_Medical_Products__c</fullName>
        <description>Count of Proposed Products with Medical Risk Record Type</description>
        <label>Count of Risk Medical Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Product_Category__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Funding_Arrangement__c</field>
            <operation>equals</operation>
            <value>Risk</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Risk_Non_Standard_Drug_Dental__c</fullName>
        <description>The number of non standard drug or dental products associated with this BRF.</description>
        <inlineHelpText>The number of non standard drug or dental products associated with this BRF.</inlineHelpText>
        <label>Count of Risk Non Standard Drug Dental</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_New__c</field>
            <operation>equals</operation>
            <value>Non - Standard</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dental, Drug</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Funding_Arrangement__c</field>
            <operation>equals</operation>
            <value>Risk</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Risk_Non_Standard__c</fullName>
        <description>The number of products that are risk and non standard.</description>
        <inlineHelpText>The number of products that are risk and non standard.</inlineHelpText>
        <label>Count of Risk Non Standard</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Funding_Arrangement__c</field>
            <operation>equals</operation>
            <value>Risk</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_New__c</field>
            <operation>equals</operation>
            <value>Non - Standard</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Stand_Alone_Disease_or_Wellness__c</fullName>
        <description>The number of products with Stand Alone Disease Management or Stand Alone Wellness</description>
        <label>Count of Stand Alone Disease or Wellness</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Stand_Alone_Disease_Mgmt_or_Wellness__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Vision_With_Cafeteria__c</fullName>
        <label>Count of Vision With Non-Parallel</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Proposed_Products__c.Cafeteria__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Wellness_Products__c</fullName>
        <label>Count of Wellness Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Core_DM_Wellness__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Opportunity__r.Account.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Account__r.Billing_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Recommendation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Recommendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <label>Requested Credits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Custom_Wellness_PP__c</fullName>
        <label>Custom Wellness PP</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_Wellness__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <formula>IF(Count_of_Custom_Products__c &gt; 0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_to_Approve_BRF__c</fullName>
        <description>B-03534 : Indicates how long it took to approve the BRF.  Formula:  ARC Approval Date (-) ARC - Approval Initial Submission Date</description>
        <formula>If(ISBLANK(ARC_Approval_Date__c), null, ARC_Approval_Date__c - ARC_Approval_Initial_Submission_Date__c)</formula>
        <label>Days to Approve BRF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deep_clone_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deep clone check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_Drug_Header_Drawloop__c</fullName>
        <defaultValue>"Non-DHMO: CareFirst BlueCross BlueShield is the shared business name of CareFirst of Maryland, Inc. and Group Hospitalization and Medical Services, Inc. CareFirst BlueCross BlueShield and CareFirst BlueChoice, Inc. are both independent licensees of the Blue Cross and Blue Shield Association."+BR()+"® Registered trademark of the Blue Cross and Blue Shield Association.® Registered trademark of CareFirst of Maryland, Inc."+BR()+BR()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclaim Info In Dental Header Drawloop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_Header_Drawloop__c</fullName>
        <defaultValue>"Serving Maryland, the District of Columbia and portions of Virginia, CareFirst BlueCross BlueShield is the shared business name of CareFirst of Maryland, Inc. and Group Hospitalization and Medical Services, Inc. Davis Vision offers an extensive national network of optometrist, ophthalmologists and opticians. Davis Vision is an independent company that provides administrative services for vision care to CareFirst BlueCross BlueShield and CareFirst BlueChoice, Inc. members. Davis Vision is solely responsible for the services it provides. CareFirst of Maryland, Inc., Group Hospitalization and Medical Services, Inc., First Care, Inc., The Dental Network and CareFirst BlueChoice, Inc. are independent licensees of the Blue Cross and Blue Shield Association."+BR()+"® Registered trademark of the Blue Cross and Blue Shield Association. ® Registered trademark of CareFirst of Maryland, Inc."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclaim Info In Medical Header Drawloop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_NonDHMO_Header_Drawloop__c</fullName>
        <defaultValue>"The Dental Network is an independent licensee of the Blue Cross and Blue Shield Association. ® Registered trademark of the Blue Cross and Blue Shield Association. ®’ Registered trademark of CareFirst of Maryland, Inc.DC/VA CareFirst BlueChoice,Inc.is an indepenedent license of the Blue Cross and Blue Shield Association.® Registered trademark of the Blue Cross and Blue Shield Association.®’ Registered trademark of CareFirst of Maryland, Inc."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclaim Info In NonDHMO Header Drawloop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_Vision_Header_Drawloop__c</fullName>
        <defaultValue>"CareFirst BlueCross BlueShield is the shared business name of CareFirst of Maryland, Inc. and Group Hospitalization and Medical Services, Inc. CareFirst BlueCross BlueShield and CareFirst BlueChoice, Inc. are both independent licensees of the Blue Cross and Blue Shield Association. ® Registered trademark of the Blue Cross and Blue Shield Association. ® Registered trademark of CareFirst of Maryland, Inc."+BR()+"CareFirst partners with Davis Vision to offer an extensive national network of optometrists, ophthalmologists and opticians."+BR()+"Davis Vision is an independent company that provides administrative services for vision care to CareFirst BlueCross BlueShield and CareFirst BlueChoice, Inc. members. Davis Vision is solely responsible for the services it provides."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclaim Info In Vision Header Drawloop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EGWP_Picklist__c</fullName>
        <label>EGWP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EGWP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EGWP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EffectiveDatePCSFormat__c</fullName>
        <formula>TEXT(DATE(YEAR(Benefit_Effective_Date__c ),MONTH(Benefit_Effective_Date__c ),DAY(Benefit_Effective_Date__c )))</formula>
        <label>EffectiveDatePCSFormat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Formulary__c</fullName>
        <defaultValue>"Null"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Formulary</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Maintenance_Choice__c</fullName>
        <defaultValue>"Null"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Maintenance Choice</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Contribution_Amount__c</fullName>
        <label>Employer Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Option__c</fullName>
        <inlineHelpText>If Other is selected, please fill in the details for Other Enrollment Option and Enrollment Vendor.</inlineHelpText>
        <label>Enrollment Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eExchange</fullName>
                </value>
                <value>
                    <fullName>eConnect Enrollment</fullName>
                </value>
                <value>
                    <fullName>eConnect Marketplace</fullName>
                </value>
                <value>
                    <fullName>CF Private Exchange</fullName>
                </value>
                <value>
                    <fullName>Manual - Paper</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Type__c</fullName>
        <label>Enrollment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parallel</fullName>
                </value>
                <value>
                    <fullName>Non Parallel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated_to_Senior_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated to Senior Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclusive_Specialty_Provider_Network__c</fullName>
        <label>Exclusive Specialty Provider Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No - Requires Approval</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exemption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Religious Exemption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtraCare_Health_Care_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExtraCare Health Care Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>File_Net_Doc_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Net Doc Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstHelp_For_Sold_BRF__c</fullName>
        <description>This field is populated by the process builder and it will be used to populate from BRF to BDF Admin</description>
        <label>FirstHelp For Sold BRF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Help_Checker__c</fullName>
        <formula>IF(Text(FirstHelp_For_Sold_BRF__c)='Yes',true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Help Checker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlexLink_Picklist__c</fullName>
        <label>FlexLink</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FlexLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlexLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formulary__c</fullName>
        <label>Formulary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Arrangements__c</fullName>
        <label>Funding Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Step_Therapy__c</fullName>
        <label>Generic Step Therapy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Dummy4</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Dummy3</fullName>
                </value>
                <value>
                    <fullName>Dummy1</fullName>
                </value>
                <value>
                    <fullName>Dummy2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandfathered_PPACA_Status__c</fullName>
        <label>PPACA Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Grandfathered_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandfathered_Status__c</fullName>
        <label>Grandfathered Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grandfathered</fullName>
                </value>
                <value>
                    <fullName>Non-Grandfathered</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Headquarters_Address__c</fullName>
        <description>Renamed as per US274</description>
        <formula>Account__r.BillingStreet  + " " +  Account__r.BillingCity  + " " + Account__r.BillingCountry  + " " + Account__r.BillingState  + " " + Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headquarters_County__c</fullName>
        <formula>Account__r.Billing_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Headquarters County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identity_Protection_Mandate_ASO__c</fullName>
        <description>Field not used.Replaced with new field Identity_Protection__c. story 3894</description>
        <label>zzIdentity Protection Mandate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identity_Protection_Mandate_Risk__c</fullName>
        <description>Field not used.Replaced with new field Identity_Protection__c. story 3894</description>
        <formula>IF( RecordType.DeveloperName == 'Risk', 'Yes','')</formula>
        <label>zzIdentity Protection Mandate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identity_Protection__c</fullName>
        <description>story 3894</description>
        <label>Identity Protection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Manager_Account_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>populate Implementation Manager added at BRF's related Account</description>
        <label>Implementation Manager (Account Team)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_FormseosX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integrated_DM_Wellness_PP__c</fullName>
        <label>Integrated DM/Wellness PP</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom_Core_DM_Wellness__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>Other - Cede Required</fullName>
                </value>
                <value>
                    <fullName>CEDE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limitations_NonEditable__c</fullName>
        <description>Used to check logic based on US B-03470 and makes this field true or false.</description>
        <formula>If( (ISPICKVAL(Request_Type__c,'Off-Cycle - Benefit Change') ||
ISPICKVAL(Request_Type__c,'Off-Cycle - Administrative and Benefit Change')) &amp;&amp; ISPICKVAL(Funding_Arrangements__c,'Risk') &amp;&amp; ISPICKVAL( Opportunity__r.Market_Segment_New__c , '200-999'),True,False)</formula>
        <label>Limitations NonEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAST_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MAST Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MHP_Acknowledgement__c</fullName>
        <formula>"For risk business, the medical benefits must be tested by CareFirst for Mental Health Parity compliance and may require changes after final sale."</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MHP Acknowledgement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MHP_Test_Result__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MHP Test Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Choice__c</fullName>
        <label>Maintenance Choice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Preferred_Stop_Loss_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-Preferred Stop Loss Carrier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_for_Contract_Period__c</fullName>
        <label>Number of Months for Contract Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Meeting_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Enrollment Meeting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Meeting_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Enrollment Meeting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Business_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Benefit Request Forms</relationshipLabel>
        <relationshipName>Benfit_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Enrollment_Option__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Enrollment Option</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Funding_Arrangements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Funding Arrangements</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Account__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owners_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owners Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PP_Blue_Rewards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP Blue Rewards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PP_CDH_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP CDH Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PP_CDH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP CDH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PP_Custom_Wellness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP Custom Wellness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PP_FSA_BlueFund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP FSA BlueFund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PP_Integrated_Carved_Out_Vendor__c</fullName>
        <label>PP Integrated - Carved-Out Vendor</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Integrated_Carved_Out_Vendor__c</field>
            <operation>equals</operation>
            <value>CVS (Direct), ESI, Other - Requires Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PP_Integrated_DM_Wellness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP Integrated DM/Wellness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PP_Rx_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PP Rx Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRF__c</fullName>
        <formula>Proposal_Request_Form__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Request Form</label>
        <referenceTo>PRF__c</referenceTo>
        <relationshipLabel>Benefit Request Forms</relationshipLabel>
        <relationshipName>Benefit_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Request__c</fullName>
        <formula>IF(ISBLANK( Proposal_Request_Form__c ) , "No", "Yes")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFP Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipName>Benfit_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebates_Withheld_by_CareFirst__c</fullName>
        <label>Rebates Withheld by CareFirst</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>50% (Requires Management Approval)</fullName>
                </value>
                <value>
                    <fullName>100% (Requires Senior Management Approval)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Sold_Flag__c</fullName>
        <formula>IF(Id= Account__r.Recent_Sold_BRF_ID__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recent_Sold_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Benefit_Request_Form1__c</fullName>
        <formula>IF( Related_Benefit_Request_Form__c!='',True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Benefit Request Form1</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>